Lesson 4: Add appeal form (web & api)
